--- a/exercises1_5.html
+++ b/exercises1_5.html
@@ -155,7 +155,7 @@ exersice 4
     ============================================================================================
     exersice 5
     ============================================================================================ -->
-<form action="">
+<!-- <form action="">
     <div> <label for=""> email:</label></div>
     <div>
         <input type="email">
@@ -201,6 +201,8 @@ exersice 4
 
 
 </form>
+===============================================================================================================
+ -->
 
 </body>
 
