--- a/exercises6_7.html
+++ b/exercises6_7.html
@@ -8,6 +8,7 @@ exersice 6
     <meta charset="UTF-8">
     <meta name="khadr" content="width=device-width, initial-scale=1.0">
     <title>khadr </title>
+    
 
 </head>
 
@@ -37,6 +38,7 @@ exersice 7
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prices</title>
+    <link rel="stylesheet" href="hello_world.css">
 </head>
 
 <body>
